bug report title text aligned left

--- a/app/assets/stylesheets/bug_reports.css.scss
+++ b/app/assets/stylesheets/bug_reports.css.scss
@@ -66,6 +66,10 @@ h4.white,h3.white{
 	margin: -30px auto 0;
 }
 
+#bug_rep_title {
+	text-align: left;
+}
+
 fieldset {
     border-radius: 3px;
 	display: table-column;
